fix for collection covers on right nav

--- a/app/stylesheets/partials/_covers.sass
+++ b/app/stylesheets/partials/_covers.sass
@@ -69,8 +69,10 @@ $hugeH: 383
   // assign some padding between each minicover
   .cover
     margin-right: 4px
+    display: inline
+    float: left !important
   .text
-    margin-top: -34px
+    margin-top: -20px
 
 .collection-with-title-here, .cover
   .text
